force-app/main/default/objects/Work_Order__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Candidate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>