force-app/main/default/objects/Work_Order__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <formula>Project__r.Client_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>