force-app/main/default/objects/Work_Order__c/fields/Person_Billable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Person_Billable_Rate__c</fullName>
    <inlineHelpText>I tells about the Person billable rate</inlineHelpText>
    <label>Person Billable Rate</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>