force-app/main/default/objects/Work_Order__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the project they’re assigned to.</description>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Candidate_Project_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>