force-app/main/default/objects/Work_Order__c/fields/Reason_for_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_On_Hold__c</fullName>
    <description>Will record the reason to put Work Order on hold.</description>
    <label>Reason for On Hold</label>
    <type>TextArea</type>
</CustomField>