force-app/main/default/objects/Work_Order__c/fields/Recruiter_Name__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiter Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Recruiter</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders (Recruiter Name)</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>