force-app/main/default/objects/Work_Order__c/fields/Role_on_Project__c.field-meta.xml
<CustomField>
    <fullName>Role_on_Project__c</fullName>
    <description>Role played by the candidate (e.g., Developer, Analyst, Tester).</description>
    <label>Role on Project</label>
    <length>75</length>
    <type>Text</type>
</CustomField>