force-app/main/default/objects/Work_Order__c/fields/Salary_Offered__c.field-meta.xml
<CustomField>
    <fullName>Salary_Offered__c</fullName>
    <description>The compensation or rate agreed for the candidate on this specific assignment.</description>
    <label>Salary Offered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>