force-app/main/default/objects/Work_Order__c/fields/Tentative_Resume_Date__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Resume_Date__c</fullName>
    <description>Will save the Tentative Resume Date to resume the On Hold Work Order.</description>
    <label>Tentative Resume Date</label>
    <type>Date</type>
</CustomField>