force-app/main/default/objects/Work_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Renewed__c</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>